[package]
name = "fastn-context-macros"
version = "0.1.3"
authors.workspace = true
edition.workspace = true
description = "Procedural macros for fastn-context"
keywords = ["async", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "../README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true