[package]
name = "fastn-context"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
description = "Type-safe async context propagation for Rust applications"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["async", "context", "tokio", "runtime", "tracing"]
categories = ["asynchronous", "development-tools"]
readme = "../README.md"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
fastn-context-macros = { path = "../fastn-context-macros", version = "0.1.3" }

[dev-dependencies]
tokio-test.workspace = true